--- a/assets/css/blog2.css
+++ b/assets/css/blog2.css
@@ -8,8 +8,10 @@ body {
 
 .blog2-container {
   display: flex;
+  flex-direction: column;
+  padding:20px;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; */
   padding-inline: 80px;
   box-sizing: border-box;
 }
@@ -35,7 +37,7 @@ body {
 }
 
 .blog2-team-image {
-  height: 80vh;
+  height: 20vh;
   border-radius: 8px;
 
 }
