--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -1470,7 +1470,7 @@ button.btn.btn-primary.details-link:hover{
 .faq-section .contact-form-wrap .contact-form-inner input.input-btn:hover{
   /* color: #FFF !important;
   background: #FF9E4A !important; */
-  background: transparent;
+  background: #fff !important;
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
@@ -3193,7 +3193,7 @@ div#sticky-wrapper {
 
 {
 
-  border-radius: 0;
+  border-radius: 20px;
 
     margin-bottom: 20px;
 
@@ -8589,7 +8589,8 @@ a.list-blog.blog-list:hover{
 
 .contact-form-wrap {
 
-  background: #fff;
+  /* background: #fff; */
+  background: #ff9e4a;
 
 }
 
@@ -8649,7 +8650,8 @@ a.list-blog.blog-list:hover{
 
   padding: 35px;
 
- background: #8fd2d7 ;
+ /* background: #8fd2d7 ; */
+ background: #ff9e4a;
 
   text-align: center;
 
@@ -8727,7 +8729,7 @@ a.list-blog.blog-list:hover{
 
   padding: 35px;
 
-  margin-top: 30px;
+  /* margin-top: 30px; */
 
 }
 
@@ -8755,7 +8757,7 @@ a.list-blog.blog-list:hover{
 
 .contact-form-inner input {
 
-  border-radius: 0;
+  border-radius: 20px;
 
   margin-bottom: 20px;
 
@@ -8781,7 +8783,7 @@ a.list-blog.blog-list:hover{
 
 .contact-form-inner textarea {
 
-  border: none;
+  border-radius: 20px !important;
 
   border-radius: 0;
 
@@ -13299,7 +13301,7 @@ section#resource .process-section.section-padding.pt-0 .container {
   background: #8fd2d7;
 }
 section#contact{
-  /* background:#ffdab8 ; */
+  background:#ff9e4a ;
 }
 .accordion.faqs .card {
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out; /* Smooth transition */
@@ -13378,4 +13380,15 @@ section#resource .section-title p{
     font-style: unset;
     font-weight: 700;
     position: relative;
+}
+.faq-section.faq-two.section-padding.pt-0 .section-title.text-center p {
+  font-size: 30px;
+  font-style: inherit !important;
+}
+.contact-form-wrap.contact-second-form .contact-form-header{
+  /* border-radius: 30px; */
+}
+.contact-form-wrap.contact-second-form .contact-form-header p{
+  font-size: 30px !important;
+  color: #061815 !important;
 }
